--- a/app/src/main/res/layout/activity_song_detail.xml
+++ b/app/src/main/res/layout/activity_song_detail.xml
@@ -19,8 +19,9 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.288"
+        app:layout_constraintVertical_bias="0.248"
         app:srcCompat="@mipmap/ic_launcher" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
@@ -49,12 +50,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/montserrat_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_song_detail"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintVertical_bias="0.038" />
 
     <ImageView
         android:id="@+id/img_play_song"
@@ -66,10 +70,10 @@
         android:layout_marginBottom="38dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.552"
+        app:layout_constraintHorizontal_bias="0.594"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/artist_detail"
-        app:layout_constraintVertical_bias="0.517"
+        app:layout_constraintVertical_bias="0.413"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <ImageView
@@ -77,28 +81,29 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginBottom="38dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/img_play_song"
-        app:layout_constraintHorizontal_bias="0.771"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.427"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_song_detail"
-        app:layout_constraintVertical_bias="0.602"
+        app:layout_constraintTop_toBottomOf="@+id/artist_detail"
+        app:layout_constraintVertical_bias="0.413"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <ImageView
         android:id="@+id/img_next_song"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="3dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginBottom="38dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.225"
-        app:layout_constraintStart_toEndOf="@+id/img_play_song"
-        app:layout_constraintTop_toBottomOf="@+id/img_song_detail"
-        app:layout_constraintVertical_bias="0.708"
+        app:layout_constraintHorizontal_bias="0.832"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/artist_detail"
+        app:layout_constraintVertical_bias="0.413"
         app:srcCompat="@mipmap/ic_launcher" />
 
 
