--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -21,7 +21,7 @@
 
 
     <TextView
-        android:id="@+id/artist"
+        android:id="@+id/playlist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
